# deploy.demo.ci-cd

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yaml
tests/: test_main.py
